--- a/style.css
+++ b/style.css
@@ -17,4 +17,12 @@ body {
 
 .animated {
     font-family: 'Charm', cursive;
+    margin: 0;
+    padding: 0;
+    font-size: 6rem;
+    background: url("img/text-bg.png") no-repeat;
+    /* https://developer.mozilla.org/en-US/docs/Web/CSS/background-clip */
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent; /* This means the text is transparent */
 }
