Add keyframe animation

--- a/style.css
+++ b/style.css
@@ -25,4 +25,19 @@ body {
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent; /* This means the text is transparent */
+    animation: moveBg 90s linear infinite;
+    -webkit-animation: moveBg 90s linear infinite;
+}
+
+/* Text Background Animation */
+@keyframes moveBg {
+    0% {
+        /* 2-value syntax: one value defines X and the other defines Y */
+        background-position: 0% 30%;
+    }
+
+    100% {
+        /* 2-value syntax: one value defines X and the other defines Y */
+        background-position: 100% 50%;
+    }
 }
